@@ -36,6 +36,7 @@
 #include "compat.h"
 #include "fuse.h"
 #include "gtkinternals.h"
+#include "menu.h"
 #include "tape.h"
 #include "ui/ui.h"
 
